@@ -21,11 +21,11 @@ namespace NHibernate.Envers.Tests.NetSpecific.Integration.Strategy
 		private int c2_1_id;
 		private int c2_2_id;
 
-		protected override void AddToConfiguration(Cfg.Configuration configuration)
+		protected override void AddToConfiguration()
 		{
-			configuration.SetProperty("nhibernate.envers.audit_strategy", typeof(ValidityAuditStrategy).AssemblyQualifiedName);
-			configuration.SetProperty("nhibernate.envers.audit_strategy_validity_store_revend_timestamp", "true");
-			configuration.SetProperty("nhibernate.envers.audit_strategy_validity_revend_timestamp_field_name", revendTimestampColumName);
+			Cfg.SetProperty("nhibernate.envers.audit_strategy", typeof(ValidityAuditStrategy).AssemblyQualifiedName)
+				.SetProperty("nhibernate.envers.audit_strategy_validity_store_revend_timestamp", "true")
+				.SetProperty("nhibernate.envers.audit_strategy_validity_revend_timestamp_field_name", revendTimestampColumName);
 		}
 
 		protected override IEnumerable<string> Mappings
