@@ -1,6 +1,6 @@
 === 1.0 GA (v 1.0.0.0), ???, ??? ===
 
-*** Breaking changes ***
+***** Breaking changes *****
 * Attribute API: RevisionEntityAttribute
 [RevisionEntity(Listener=typeof(MyListener))] no longer available. 
 Use [RevisionEntity(typeof(MyListener))] instead.
@@ -10,6 +10,8 @@ fluentConfiguration.SetRevisionEntity<MyRevEntity>(e => e.Number, e => e.Timesta
 ...changed to...
 fluentConfiguration.SetRevisionEntity<MyRevEntity>(e => e.Number, e => e.Timestamp, new RevListener());
 
+TestBase.AddToConfiguration no longer takes Configuration as arg. Available on object. (affects unit tests only)
+*****************************
 
 
 
